--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "darkaonline/l5-swagger": "*",
+        "guzzlehttp/guzzle": "*",
+        "intervention/image": "*",
+        "laravel/cashier": "*",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/socialite": "*",
+        "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "*",
+        "predis/predis": "*",
+        "stripe/stripe-php": "*",
+        "zircote/swagger-php": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -31,7 +40,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Support/V1/Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
